Updated the code with all the Questions

--- a/CSS/Selectors/styles.css
+++ b/CSS/Selectors/styles.css
@@ -17,11 +17,15 @@
     text-align: center;
 } */
 
-h1[draggarble]{
+/* h1[draggarble]{
     color: purple;
 }
 
 p[draggable]{
     color:purple
-}
+} */
 
+.red .text{
+    color:orange
+
+}
