--- a/CSS/Combining Selectors/style.css
+++ b/CSS/Combining Selectors/style.css
@@ -1,6 +1,6 @@
 /* Group */
 h1,
-h2 {
+h2{
   color: blueviolet;
 }
 
@@ -20,6 +20,6 @@ li.done {
 }
 
 /* Multiple Combiners */
-ul p.done {
-  font-size: 0.5rem;
+ul > p.done {
+  font-size: 1rem;
 }
